fix context search result avatar vertical alignment

--- a/shared/style/custard.css
+++ b/shared/style/custard.css
@@ -199,6 +199,7 @@ body.fullscreen .container {
   margin-right: 5px;
   height: 24px;
   min-width: 24px;
+  vertical-align: -7px;
 }
 
 .context-switch .no-matches {
